--- a/Examples/HTML/UnitTest1/UnitTest1.html
+++ b/Examples/HTML/UnitTest1/UnitTest1.html
@@ -2,22 +2,26 @@
 <html>
 <head>
     <title>Unit Test 1</title>
+    <link href="style.css" rel="stylesheet" />
 </head>
 <body>
+<div class="datagrid">
     <table id="testResult">
         <thead>
-            <tr>
-                <th>Expression</th>
-                <th>Input</th>
-                <th>Result</th>
-            </tr>
+        <tr>
+            <th>Expression</th>
+            <th>Input</th>
+            <th>Result</th>
+        </tr>
         </thead>
         <tbody>
 
         </tbody>
     </table>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.0.min.js" />
-    <script type="text/javascript" src="Src/Expression.js" />
-    <script type="text/javascript" src="Test/UnitTest1.js" />
+</div>
+
+    <script type="text/javascript" src="jquery-2.1.0.min.js" ></script>
+    <script type="text/javascript" src="../../../src/Expression.js"></script>
+    <script type="text/javascript" src="../../../Test/UnitTest1.js" ></script>
 </body>
 </html>
